Prevent Mini-Cart table to show horizontal scrollbar (https://github.com/woocommerce/woocommerce-blocks/pull/9676)

--- a/plugins/woocommerce-blocks/assets/js/blocks/mini-cart/style.scss
+++ b/plugins/woocommerce-blocks/assets/js/blocks/mini-cart/style.scss
@@ -127,8 +127,6 @@ h2.wc-block-mini-cart__title {
 
 	.wc-block-mini-cart__products-table {
 		margin-bottom: auto;
-		margin-right: -$gap;
-		padding-right: $gap;
 
 		.wc-block-cart-items__row {
 			padding-top: $gap-smaller;
